[package]
name = "check_elevation"
version = "0.1.0"
edition = "2021"
authors = ["h4rl"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_Memory",
] }