[package]
name = "check_elevation"
version = "0.1.0"
edition = "2021"

authors = ["h4rl"]
license-file = "LICENSE"
readme = "README.md"
description = "Check if the current process is elevated. A successor to the `is_elevated` crate."

homepage = "https://github.com/h4rl/check_elevation"
repository = "https://github.com/h4rl/check_elevation"

keywords = ["windows", "winapi", "UAC", "elevate", "administrator"]
categories = ["development-tools", "os::windows-apis", "os", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_System_Memory",
] }