[package]
name = "check_elevation"
version = "0.2.4"
edition = "2021"

authors = ["h4rl"]
license = "BSD-2-Clause"
readme = "README.md"
description = "Check if the current process is elevated. A successor to the `is_elevated` crate. Now no_std!"

homepage = "https://github.com/h4rldev/check_elevation"
repository = "https://github.com/h4rldev/check_elevation"

keywords = ["windows", "winapi", "UAC", "elevate", "administrator"]
categories = [
  "development-tools",
  "os::windows-apis",
  "os",
  "authentication",
  "no-std",
]

exclude = ["tests/**", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", default-features = false, features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
